# pwn

./: README.md  bf_1  bf_1.c  example0  example0.c  nop_sled.c  peda-session-bf_1.txt  test.c
Advanced/CSUroutines/: CSU  exit_function.h  fini.c
Advanced/SROP/: .gdb_history  restore_sigcontext.c  srop  srop.c
Advanced/SSP_Master_Canary/: .gdb_history  exploit_master2.py  peda-session-master2.txt  t__dl_allocate_tls_storage.h  t_pthread_create.c  t_security_init.h  t_tcbhead_t.h
Advanced/Seccomp_Filter_Bypass/: do_syscall_64.c  flag  seccomp.c  seccomp.py
Advanced/_IO_FILE/: .gdb_history  _io_file1  _io_file2.c
Advanced/_IO_FILE/_IO_FILE_/: _IO_FILE_FLAGS.h
Advanced/_IO_FILE/_IO_FILE_Arbitray_READ/: .gdb_history  file_ar1  file_ar1.c  file_ar2  file_ar2.c
Advanced/_IO_FILE/_IO_FILE_Arbitray_WRITE/: .gdb_history  exploit_file_aw3.py  file_aw1  file_aw2.c  file_aw3  testfile
Advanced/_IO_FILE/_IO_FILE_PLUS/: _IO_FILE_plus.h  _IO_jump_t_fread.h
Advanced/_IO_FILE/_IO_FILE_check_bypass/: IO_validate_vtable.c  vtables_bypass.py
Advanced/envrion_ptr/: .gdb_history  environ.c  exploit_environ.py
Advanced/oneShotGadget/: .gdb_history  oneshot_test.py
Advanced/rtld/: .gdb_history  _rtld_global.h  dlfini  dlfini.c
FormatStringBug/: core  exploit_basic_exploitation_002.py  exploit_fsb2.py  flag  fsb1  fsb1.c  fsb2.c  fsb_example2  fsb_example2.c  fsb_example3  modulation.c  peda-session-basic_exploitation_002.txt  peda-session-fsb_correct.txt  rfsb1  rfsb1.c  rfsb2  rfsb2.c
Heap/Breaking_Calloc/: calloc1  calloc1.c  flag
Heap/Heap_Feng_Shui/: .gdb_history  fengshui.py  fengshui1
Heap/House_of_Force/: .gdb_history  _int_malloc.c  force1.c  peda-session-force1.txt  peda-session-force2.txt
Heap/House_of_Lore/: .gdb_history  lore1.c  lore2  lore2.c  lore2.py  peda-session-lore2.txt
Heap/Large_Bin_Attack/: large_bin.c  largebin1  largebin2.c  largebin2.py  largebin2_exploit.py
Heap/Memory_Leak/: leak1  leak2  leak2.py
Heap/Overlapping_chunks/: .gdb_history  overlap1  overlap2  overlap2.c
Heap/Poison_NULL_Byte/: null1  null1.c  peda-session-null1.txt
Heap/Tcache/: tcache_escape.c  tcache_ex.c
Heap/Tcache/Tcache_dup/: tcache_dup1  tcache_dup2.c
Heap/Tcache/Tcache_in/: tache_put.c  tcache_get_flow.c  tcache_perthread_struct.c
Heap/Tcache_House_of_spirit/: spirit2  spirit2.c  spirit2.py  spirt1
Heap/Tcache_memory_leak/: leak1.c  leak2  leak2.c  main_arena_tcache_leak  stdout_leak  stdout_leak.c
Heap/double_free/: .gdb_history  dfb1
Heap/double_free/fastbin_dub/: .gdb_history  (+5 more)
Heap/ptmalloc2/: .gdb_history  f_error2  f_error2.c  f_error3  f_error3.c  f_error4  f_error5.c  f_error6.c  f_error7  f_error7.c  f_error8.c  m_error2  m_error2.c  main_arena  main_arena.c  malloc2  peda-session-f_error2.txt  peda-session-f_error8.txt  peda-session-unlink3.txt  unlink1  unlink1.c  unlink2  unlink3.c
Heap/security_check/: f_error1  f_error1.c  f_error8  unlink2.c
Heap/tcache_double_free_bypass_2_29/: tcache_dfb  tcache_dfb.c  tcache_dfb_poc.c
Heap/unsafe_unlink/: .gdb_history  peda-session-unlink_unsafe.txt  unlink2.py  unlink2_poc.py  unlink_call.c  unlink_unsafe
Heap/unsorted_bin_attack/: .gdb_history  peda-session-unsortedbin1.txt  unsorted  unsorted.c  unsorted.py  unsortedbin1  unsortedbin1.c
PIE/: .gdb_history  example8  example8.c  example8.py  no_pie  peda-session-example8.txt  pie
RELRO/: .gdb_history  RELRO_leak.py  example7  example7.c
ROP/: exploit_rop.py  rop
ROP/ASLR/: ASLR_allow.sh  ASLR_test.c  aslr1  aslr1.c  core  got_plt.txt  leak.py  rop.py  scanf_got.py
ROP/GOTOverwrite/: .gdb_history  got_ow.c
ROP/RTL/: exploit_rtl1_chai.py  find  find.c
SSP/: example6.c  master1  master1.c  no_ssp  peda-session-master1.txt  ssp  ssp_server  ssp_server_explopit.py
ToolOfPwn/PWNTOOLS/: asm  asm.c
ToolOfPwn/ROPGADGET/: gadget
dreamhack-io/FormatStringBug/: .gdb_history  fsb2  fsb_correct  fsb_correct.c  fsb_example3.c  modulation  peda-session-modulation.txt
dreamhack-io/PIE/: pie.c
dreamhack-io/RELRO/: .gdb_history  RELRO_leak2.py  core  example_leak.py  peda-session-example7.txt
dreamhack-io/ROP/: .gdb_history  rop.c
dreamhack-io/SSP/: .gdb_history  example6  example6_exploit.py  example6_leak.py  leak_test.py  no_ssp.c  peda-session-example6.txt  peda-session-ssp_fork1.txt  ssp.c  ssp_fork1  ssp_fork1.c  ssp_server.c  ssp_server1.py
dreamhack-io/nxbit/: .gdb_history  HelloWorld  RTL_paylod.py  example2_nx  example2_x.c  peda-session-RTL_1.txt
dreamhack-io/stackbof/: .gdb_history  basic_bof  basic_bof.c  peda-session-sbof1.txt  sbof1.c
dreamhack-io/tmp/: .gdb_history  binary.c  nop_sled  plt1  plt1.c  plt_leak_scanf.py  read_write.c  rop64  rop64.c  rop64_.py  test  test.py  test2.py
dreamhack-io/tmp_08/: test.txt
dreamhack-io/vuln/: vuln
linux-binary/: @  elf32_test.c  nosym  nosym.c  relocated  t_size  test.c  test2  test_1  test_2
linux-binary/Phdrs/: ELF32_Phdr.c  Elf32_DYN.c
linux-binary/elf_32_shdr/: Elf64_Rel  Elf64_Sym.cpp  Rela.cpp  elf_32_shdr.c
linux-binary/rel_code_injection/: evil_puts.c  hello_world  hello_world.c  quenya_32bit.tgz
linux-binary/rel_code_injection/quenya32bit/libptrace/: .gitignore  Makefile.am  build-clean.sh  configure.ac
linux-binary/rel_code_injection/quenya32bit/libptrace/doc/: libptrace.3
linux-binary/rel_code_injection/quenya32bit/libptrace/src/: .gitignore  Makefile.am  libptrace.c  libptrace.h  libptrace_elf.c  libptrace_elf.h  libptrace_error.h  libptrace_linux.c  libptrace_linux.h  libptrace_linux_i386.c  libptrace_linux_i386.h  libptrace_linux_x86.c  libptrace_linux_x86.h  libptrace_linux_x86_64.h  libptrace_windows.c  libptrace_windows.h  libptrace_windows_i386.c  libptrace_windows_i386.h  libptrace_wrapper.c  libptrace_wrapper.h  libptrace_x86.c  libptrace_x86.h
nxbit/: RTL_1  RTL_1.c  example2_x  tmp.txt
nxbit/EX1/: .gdb_history  peda-session-basic_exploitation_001.txt
shellcode/: shellcode.asm
stackbof/: .gdb_history  peda-session-basic_bof.txt  sbof1
tmp/: binary  read_write
tmp_08/: exploit.py
vuln/: .gdb_history  puzzing.py
(+257 files in other folders)
